guardado2 25/01/2018 poner estilo en casa

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="boton">
 
-        <item name="android:background"></item>
+        <item name="android:background">@drawable/estiloboton</item>
 
     </style>
 
